--- a/rulset.ini
+++ b/rulset.ini
@@ -56,6 +56,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=☑️ SELECT`select`.*
 custom_proxy_group=♻️ AUTOMATIC`url-test`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`.* http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换
 
 ;设置分组标志位
 
