--- a/rulset.ini
+++ b/rulset.ini
@@ -17,8 +17,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 
-custom_proxy_group=☑️ SELECT`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.* http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=☑️ 2ri4eUI`select`.*
+custom_proxy_group=♻️ AUTO`url-test`[]🔰CFW` http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🐟 漏网之鱼`select`.*
 
 ;设置分组标志位
