--- a/rulset.ini
+++ b/rulset.ini
@@ -18,7 +18,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 
 custom_proxy_group=☑️ 2ri4eUI`select`.*
-custom_proxy_group=♻️ AUTO`url-test`[]🔰CFW` http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ AUTO`url-test`[] 2ri4eUI_🇹🇷0` http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🐟 漏网之鱼`select`.*
 
 ;设置分组标志位
