--- a/rulset.ini
+++ b/rulset.ini
@@ -1,7 +1,7 @@
 [custom]
-
+ruleset=🔰 CFW 🔰,[]FINAL
 custom_proxy_group=☑️ 2ri4eUI`select`.*
 custom_proxy_group=♻️ AUTO`url-test`[]🇹🇷 turkey` http://www.gstatic.com/generate_204`300,,50
-
+custom_proxy_group=🔰 CFW 🔰`select`.*
 enable_rule_generator=true
 overwrite_original_rules=true
